# ZubrDSPFirmware

./: .gitignore  CMakeLists.txt  build.sh  pico_flash_region.ld
include/: app.h  dac.h  usb.h  usb_common.h  usb_config.h
src/: indicator.c  main.c  usb_descriptors.c
